[project]
name = "audioupdater"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Virace", email = "Virace@aliyun.com" }
]
dependencies = [
    "requests>=2.32.3",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
